--- a/style.css
+++ b/style.css
@@ -124,6 +124,12 @@ nav a.sign-in:hover {
 /* ------------------------- BODY ---------------------------- */
 /*                                                             */  
 
+div.product-box {
+  margin-bottom: 15px;
+}
+
+
+
 body.main div.container {
   padding-left: 15px;
   overflow: hidden;
@@ -133,7 +139,7 @@ body.main div.container {
 
 body.main a.box {
   width: 160px;
-  margin: 15px 20px 5px;
+  margin: 15px 15px 5px;
   float: left;
   border: 1px solid #e8e8e8;
   border-radius: 5px;
@@ -148,7 +154,6 @@ body.main a.box {
   background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#efefef));
   background: -moz-linear-gradient(top,  #fff,  #efefef); 
 }  
-
 
 
 
