--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
   
-body {
+ body {
   padding: 30px;
   font-family: "Times New Roman" , Arial, "Lucida Grande", Verdana, sans-serif;
   font-size: 18px;
@@ -9,11 +9,11 @@ body {
   text-align: center;
 }
 
-body.main {
+.main {
   margin-top: 8px;
 }
 
-body.main, div.container {
+.main, div.container {
   padding-left: 15px;
 }
 
@@ -124,7 +124,7 @@ div.box-container {
   margin-bottom: 40px;
 }
 
-body.main a.box {
+.main a.box {
   width: 160px;
   margin: 15px 20px 5px;
   display: inline-block;
@@ -143,50 +143,50 @@ body.main a.box {
 }  
 
 
-body.main, div.box-container {
+.main, div.box-container {
   padding-left: 15px;
   margin bottom: 40px;
   margin-top: 10px;
 }
 
-body.main div.box-container div.headline {
+.main div.box-container div.headline {
   width: 820px;
   margin-left: -20px;
 }
 
-body.main div.product-box h3 {
+.main div.product-box h3 {
   font-size: 21px;
   margin: 3px 0 0 10px;
 }
 
-body.main div.product-box h3 span {
+.main div.product-box h3 span {
   text-decoration: underline;
 }
 
-body.main div.product-box h3 sup {
+.main div.product-box h3 sup {
   color: #999999;
   font-size: 12px;
 }
 
-body.main div.product-box h4 {
+.main div.product-box h4 {
   margin: 8px 0 10px;
   font-size: 14px;
   color: #cc0000;
 }
 
-body.main div.product-box p {
+.main div.product-box p {
   color: #222;
   font-size: 14px;
   margin-top: 5px;
 }
 
-body.main div.customers div.meet {
+.main div.customers div.meet {
   position: absolute;
   margin-top: 50px;
   margin-left: -125;
 }
 
-body.main div.customers div.meet img.arrow {
+.main div.customers div.meet img.arrow {
   position: absolute;
   width: 69px;
   height: 36px;
@@ -194,7 +194,7 @@ body.main div.customers div.meet img.arrow {
   top: 65px;
 }
 
-body.main div.customers div.meet a.thumbnails {
+.main div.customers div.meet a.thumbnails {
   display: block;
   margin-left: -120px;
   width: 143px;
@@ -203,29 +203,29 @@ body.main div.customers div.meet a.thumbnails {
   text-indent: -10000em;
 }
 
-body.main div.customers div.meet a.thumbnails:hover {
+.main div.customers div.meet a.thumbnails:hover {
   background: url('images/img-customers.png') no-repeat 0 bottom;
 }
 
 
-body.main div.customers div.meet p {
+.main div.customers div.meet p {
   font-size: 13px;
   margin-top: 0px;
   margin-left: -120px;
 }
 
-body.main div.customers div.meet p, a:hover {
+.main div.customers div.meet p, a:hover {
   color: #369;
 }
 
 
-body.main div.customers a.world {
+.main div.customers a.world {
   float: right;
   height: 200px;
   width: 200px;
 }
 
-body.main div.customers div.companies p {
+.main div.customers div.companies p {
   text-align: left;
   padding-top: 10px;
   font-weight: 400;
@@ -234,34 +234,34 @@ body.main div.customers div.companies p {
   color: #666;
 }
 
-body.main div.customers div.companies img {
+.main div.customers div.companies img {
   margin-bottom: 20px;
 }
 
 /* MANIFESTO */
 
-body.main div.column-left {
+.main div.column-left {
   width: 380px;
   float: left;
   margin-left: 10px;
 } 
 
-body.main div.manifesto div.belief {
+.main div.manifesto div.belief {
   text-align: left;
   line-height: 1.4em;
   font-size: 14px;
   margin: 20px 0;
 }
 
-body.main div.manifesto div.belief {
+.main div.manifesto div.belief {
   margin-top: 10px;
 }
 
-body.main div.manifesto div.belief {
+.main div.manifesto div.belief {
   margin-bottom: 10px;
 }
 
-body.main div.manifesto div.belief h3 {
+.main div.manifesto div.belief h3 {
   float: left;
   font-size: 58px;
   font-weight: 500;
@@ -271,17 +271,17 @@ body.main div.manifesto div.belief h3 {
   width: 30px;
 }
 
-body.main div.manifesto div.belief h4 {
+.main div.manifesto div.belief h4 {
   font-size: 18px;
   margin: 5px 0;
   color: #cc0000;
 }
 
-body.main div.manifesto div.belief p {
+.main div.manifesto div.belief p {
   margin: 1px 0 20px 45px;
 }
 
-body.main div.column-right {
+.main div.column-right {
   width: 380px;
   float: right;
   margin-right: 10px;
@@ -290,11 +290,11 @@ body.main div.column-right {
 
 /*  BOOK AREA */
 
-body.main div.rework div.quotes {
+.main div.rework div.quotes {
   padding-top: 10px;
 }
 
-body.main div.rework div.quotes h3 {
+.main div.rework div.quotes h3 {
   color: #888;
   font-weight: 300;
   font-style: italic;
@@ -302,46 +302,46 @@ body.main div.rework div.quotes h3 {
   margin: 35px 0 10px;
 }
 
-body.main div.rework div.quotes p {
+.main div.rework div.quotes p {
   font-size: 15px;
   margin-top: 10px;
 }
 
 
-body.main div.rework div.book {
+.main div.rework div.book {
   position: absolute;
   margin-left: 790px;
   margin-top: 50px;
 }
 
-body.main div.rework div.book img.arrow {
+.main div.rework div.book img.arrow {
   position: absolute;
   top: 70px;
   left: -50px;
 }
 
-body.main div.rework div.book p {
+.main div.rework div.book p {
   font-size: 12px;
   margin-top: 3px;
   margin-left: 10px;
   text-align: center;
 }
 
-body.main div.rework div.book p :hover {
+.main div.rework div.book p :hover {
   color: #369;
 }
 
-body.main div.rework div.book p a:hover {
+.main div.rework div.book p a:hover {
   color: #369;
 }
 
-body.main div.rework #book {
+.main div.rework #book {
   width: 293px;
   height: 400px;
   float: left;
 }
 
-body.main #end_tagline {
+.main #end_tagline {
   width: 900px;
 }
 
